2007-03-2  Valentin Todorov  <valentin.todorov@chello.at>
    * R/covMcd (print.mcd): solve a conflict with fastmcd() in package robust - 
    *   both return an object of class "mcd"
    
2007-03-28  Martin Maechler  <maechler@stat.math.ethz.ch>

    * R/covMcd.R (.fastmcd): subsample size  myk <- p+1  (was 'p')

2007-03-27  Martin Maechler  <maechler@stat.math.ethz.ch>

    * R/covMcd.R: cosmetic changes; comments
    * src/rffastmcd.f: ditto

    * tests/tmcd.R: added very small sample (n < 2p) examples.

2007-03-26  Martin Maechler  <maechler@stat.math.ethz.ch>

    * R/covMcd.R (covMcd): be more tolerant about small n,
        notably n < 2p, now only requiring  n >= p + 2

    * src/rf-common.f (rfnbreak): really unused
    * src/rfltsreg.f, src/rffastmcd.f: comment use of rfnbreak()

2007-03-24  Martin Maechler  <maechler@stat.math.ethz.ch>

    * R/covMcd.R (covMcd): ans$raw.cov should be matrix even for p==1

2007-03-21  Martin Maechler  <maechler@stat.math.ethz.ch>

    * R/ltsReg.R (ltsReg.default): fix long-standing ("rrcov") bug of
    wrong coefficient order in ltsReg(x,y, intercept=FALSE).

    * tests/LTS-specials.R: add regression-test

2007-02-08  Martin Maechler  <maechler@stat.math.ethz.ch>

    * R/covMcd.R (singularityMsg): moved the remaining cases out of
    covMcd().

2007-01-24  Martin Maechler  <maechler@stat.math.ethz.ch>

    * R/covMcd.R (covMcd): save 'singularity' info as list, and don't
        append it as string to 'method'.
    (singularityMsg): new utility used for printing singularity of MCD

    (print.mcd): using strwrap() instead of "\n" such that print()
    obeys options("width").


2006-12-28  Martin Maechler  <maechler@stat.math.ethz.ch>

    * DESCRIPTION (Version): 0.2-7 released to CRAN

    * src/rfltsreg.f: get rid of warnings, notably some extraneous args.
    * src/rffastmcd.f: ditto

    * inst/test_MCD.R (mortality, mort3): add example {near singular}